--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,7 +6,7 @@ $fa-font-path: "@/assets/fonts/fontawesome";
 
 @import "node_modules/normalize.css/normalize";
 @import "node_modules/vue-select/dist/vue-select";
-// @import "node_modules/@vuepic/vue-datepicker/dist/main";
+@import "node_modules/@vuepic/vue-datepicker/dist/main";
 // @import "node_modules/floating-vue/dist/style";
 
 @import "@/styles/bootstrap";
