add companies list

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,7 +22,7 @@ $fa-font-path: "@/assets/fonts/fontawesome";
 @import "@/styles/components/UI/modal";
 @import "@/styles/components/UI/burger";
 @import "@/styles/components/UI/table";
-// @import "@/styles/components/UI/pagination";
+@import "@/styles/components/UI/pagination";
 @import "@/styles/components/UI/notification";
 @import "@/styles/components/UI/overlay";
 @import "@/styles/components/UI/icon";
