--- a/src/styles/components/UI/pagination.scss
+++ b/src/styles/components/UI/pagination.scss
@@ -54,17 +54,6 @@
                     border: none;
                 }
             }
-
-            @include theme('dark') {
-                background: var(--color-dark);
-                border-color: rgba(var(--color-green-rgb), 0.5);
-                color: var(--color-white);
-
-                @include r($sm) {
-                    background: none;
-                    border: none;
-                }
-            }
         }
     
         &.active {
@@ -72,13 +61,8 @@
                 font-weight: 700;
     
                 @include theme('light') {
-                    color: var(--color-green);
-                    border-color: var(--color-green);
-                }
-
-                @include theme('dark') {
-                    color: var(--color-green);
-                    border-color: var(--color-green);
+                    color: var(--color-blue);
+                    border-color: var(--color-blue);
                 }
             }
         }
@@ -86,13 +70,8 @@
         &:hover:not(.disabled, .active) {
             button {
                 @include theme('light') {
-                    color: rgba(var(--color-green-rgb), 0.8);
-                    border-color: rgba(var(--color-green-rgb), 0.8);
-                }
-
-                @include theme('dark') {
-                    color: rgba(var(--color-green-rgb), 0.8);
-                    border-color: rgba(var(--color-green-rgb), 0.8);
+                    color: rgba(var(--color-blue-rgb), 0.8);
+                    border-color: rgba(var(--color-blue-rgb), 0.8);
                 }
             }
         }
@@ -116,12 +95,6 @@
                         border: 1px solid var(--color-gray);
                         color: var(--color-black);
                     }
-
-                    @include theme('dark') {
-                        background: var(--color-dark);
-                        border: 1px solid rgba(var(--color-green-rgb), 0.5);
-                        color: var(--color-white);
-                    }
                 }
 
                 &::before {
@@ -138,10 +111,6 @@
                     
                     @include theme('light') {
                         background-image: arrow-left-bg-image('black');
-                    }
-
-                    @include theme('dark') {
-                        background-image: arrow-left-bg-image('green');
                     }
                 }
             }
