--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -81,7 +81,7 @@ input[type="number"] {
     @include theme("light") {
         color: var(--color-black);
         box-shadow: 6px 6px 20px rgba(227, 227, 227, 0.25);
-        border: 1px solid var(--color-gray) !important;
+        border: 1px solid var(--color-gray);
         background-color: rgba(var(--color-gray-rgb), 0.4);
     }
 }
